# amux

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REPORT.md
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.claude/agents/: beads-worker.md  worker.md
docs/: cat-leak-investigation.md
src/: cli.rs  client.rs  common.rs  main.rs  server.rs  util.rs
src/client/: attach.rs  mod.rs
src/commands/: attach.rs  current.rs  handoff.rs  mod.rs  query.rs  respawn.rs  server.rs  session.rs  top.rs
src/daemon/: mod.rs  registry.rs  server.rs  session.rs  vterm.rs  watchdog.rs
src/protocol/: codec.rs  messages.rs  mod.rs
tests/: e2e-top-preview.sh  e2e.sh
