[package]
name = "amux"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "signal", "sync", "macros", "time"] }
nix = { version = "0.29", features = ["process", "signal", "user", "fs"] }
anyhow = "1"
