[package]
name = "amux"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["process", "signal", "user", "fs", "term", "ioctl"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
